feature_viewdocent_forms: - factory "MeetingEventHandler" und CancelFormController in MeetingsController integriert - Bugfixes - CancelForm lauffähig gemacht

--- a/app/templates/form_meetingcancel.html
+++ b/app/templates/form_meetingcancel.html
@@ -1,6 +1,6 @@
 <div class="modal-dialog modal-lg">
-    <div class="modal-content" ng-controller="CancelFormController">
-        <form class="form-horizontal" name="cancelForm" ng-submit="submit()" novalidate>
+    <div class="modal-content">
+        <form class="form-horizontal" name="cancelForm" ng-submit="submitCancelForm()" novalidate>
             <div class="modal-header">
                 <h2 class="modal-title"><strong>Sprechstunde absagen</strong></h2>
             </div>
@@ -10,7 +10,7 @@
                     <div class="col-lg-8">
                         <input id="cancelSeries" class="checkbox-inline mtp-checkbox mtp-checkbox-series"
                                type="checkbox"
-                               value="cancelSeries" ng-model="cancel_series">
+                               value="cancelSeries" ng-model="cancel_series" ng-click="setCancelSeries(cancel_series)">
                         <a href="#" data-toggle="tooltip" data-placement="right"
                            title="Soll die einzelne Sprechstunde oder die gesamte Sprechstundenserie abgesagt werden?">
                             <div class="badge">?</div>
@@ -24,7 +24,7 @@
                 <button class="btn mtp-icon-link" type="submit"><i class="fa fa-check fa-lg mtp-icon mtp-icon-xl"></i>
                 </button>
             </div>
-            <pre>meeting = {{meeting | json}}</pre>
+            <pre>meeting = {{cancelMeeting | json}}</pre>
             <pre>cancel_series = {{cancel_series | json}}</pre>
         </form>
     </div>
