--- a/app/templates/templ_meetingpanel.html
+++ b/app/templates/templ_meetingpanel.html
@@ -102,7 +102,8 @@
                 <button id="btnCancelMeeting" class="btn mtp-panel-icon-link pull-right" data-target="#cancelForm"
                         data-toggle="modal" ng-click="setCancelMeeting(meeting)"><i
                         class="fa fa-close fa-lg mtp-icon-xl"></i></button>
-                <button id="btnEditMeeting" class="btn mtp-panel-icon-link pull-right"><i
+                <button id="btnEditMeeting" class="btn mtp-panel-icon-link pull-right" data-target="#editForm"
+                        data-toggle="modal" ng-click="setEditMeeting(meeting)"><i
                         class="fa fa-pencil fa-lg mtp-icon-xl"></i>
                 </button>
             </div>
