--- a/app/templates/form_meetingedit.html
+++ b/app/templates/form_meetingedit.html
@@ -1,22 +1,59 @@
 <div class="modal-dialog modal-lg">
     <div class="modal-content">
-        <div class="modal-header">
-            <button type="button" class="close" data-dismiss="modal">&times;</button>
-            <h4 class="modal-title">Sprechstunde bearbeiten</h4>
-        </div>
-        <div class="modal-body">
-            <form class="form-horizontal" ng-controller="CreationFormController" ng-submit="creationFormEventHandler.submit()">
+        <form class="form-horizontal" name="editForm" ng-submit="submitEditForm()" novalidate>
+            <div class="modal-header">
+                <h2 class="modal-title"><strong>Sprechstunde ändern</strong></h2>
+            </div>
+            <div class="modal-body">
                 <div class="form-group">
-                    <label class="control-label col-sm-2">Titel:</label>
-                    <div class="col-sm-10">
-                        <input type="text" class="form-control" id="title" placeholder="Halo i bims 1 Welt!">
+                    <label class="control-label col-lg-3" for="title">Titel:</label>
+                    <div class="col-lg-9">
+                        <input id="title" class="form-control" type="text"
+                               placeholder="Wie soll der neue Titel lauten?" ng-model="editMeeting.title"
+                               required>
                     </div>
                 </div>
-            </form>
-        </div>
-        <div class="modal-footer">
-            <button type="button" class="btn btn-default">Speichern</button>
-            <button type="button" class="btn btn-default">Abbrechen</button>
-        </div>
+                <div class="form-group">
+                    <label class="control-label col-lg-3" for="room">Raum:</label>
+                    <div class="col-lg-9">
+                        <input id="room" class="form-control" type="text"
+                               placeholder="In welchem Raum soll die Sprechstunde stattfinden?"
+                               ng-model="editMeeting.room" required>
+                    </div>
+                </div>
+                <div id="maxParticipantsGroup" class="form-group" ng-hide="newMeeting.has_slots">
+                    <label class="control-label col-lg-3" for="max_participants">Max. Teilnehmer:</label>
+                    <div class="col-lg-9">
+                        <input id="max_participants" class="form-control" type="text"
+                               placeholder="Wie viele Studierende sollen an der Sprechstunde teilnehmen können?"
+                               ng-model="editMeeting.max_participants" ng-required="!editMeeting.has_slots">
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label class="control-label col-lg-3" for="email_notification_docent">Emailnotifikation:</label>
+                    <div class="col-lg-9">
+                        <input id="email_notification_docent" class="checkbox-inline mtp-checkbox" type="checkbox"
+                               value="email_notification_docent" ng-model="editMeeting.email_notification_docent">
+                        <a href="#" data-toggle="tooltip" data-placement="right"
+                           title="Soll bei An-/Abmeldungen eine Benachrichtigung per Email erfolgen?">
+                            <div class="badge">?</div>
+                        </a>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label class="control-label col-lg-3" for="description">Beschreibung:</label>
+                    <div class="col-lg-9">
+                        <textarea id="description" class="form-control" rows="5"
+                                  placeholder="Soll die Sprechstunde näher beschrieben werden?"
+                                  ng-model="editMeeting.description"></textarea>
+                    </div>
+                </div>
+        </form>
     </div>
+    <div class="modal-footer">
+        <button type="button" class="btn btn-default">Speichern</button>
+        <button type="button" class="btn btn-default">Abbrechen</button>
+    </div>
+    </form>
+</div>
 </div>
