feature_viewdocent_forms: - Beschreibungsfeld in creationForm und editForm jetzt required und max 500 Zeichen

--- a/app/templates/form_meetingedit.html
+++ b/app/templates/form_meetingedit.html
@@ -45,7 +45,7 @@
                     <div class="col-lg-9">
                         <textarea id="description" class="form-control" rows="5"
                                   placeholder="Soll die Sprechstunde näher beschrieben werden?"
-                                  ng-model="editMeeting.description" maxlength="500"></textarea>
+                                  ng-model="editMeeting.description" required ng-maxlength="500"></textarea>
                     </div>
                 </div>
             </div>
