--- a/app/templates/templ_docentselectorelement.html
+++ b/app/templates/templ_docentselectorelement.html
@@ -1,5 +1,5 @@
 <li ng-mouseenter="setSelectorClass($event)" ng-mouseleave="setSelectorClass($event)">
-    <div class="docent-selector-icon fa fa-user fa-lg" ng-model="searchBox">
+    <div class="docent-selector-icon fa fa-user fa-lg">
         <!--TODO nicht funktionstüchtig
         <h4 ng-repeat="docent in docents | filter:searchBox" class="docent-selector-name">
             {{docent.firstname + ' ' + docent.lastname}}
@@ -8,7 +8,7 @@
     </div>
     <div class="docent-selector-content">
         <h4 class="docent-selector-name">
-            Prof. Dr. Andrej Bachmann
+            {{docent.lastname + ', ' + docent.firstname }}
         </h4>
     </div>
 </li>
