--- a/app/templates/form_participationcancel.html
+++ b/app/templates/form_participationcancel.html
@@ -15,6 +15,7 @@
                 <button class="btn mtp-icon-link" type="submit"><i class="fa fa-check fa-lg mtp-icon mtp-icon-xl"></i>
                 </button>
             </div>
+            <pre>participation = {{cancelParticipation | json}}</pre>
         </form>
     </div>
 </div>
