--- a/app/templates/form_participationcancel.html
+++ b/app/templates/form_participationcancel.html
@@ -6,7 +6,7 @@
             </div>
             <div class="modal-body">
                 <div class="form-group">
-                    <label class="control-label col-lg-9">Möchten Sie sich von der ausgewählten Sprechstunde abmelden?</label>
+                    <label class="col-lg-9">Möchten Sie sich von der ausgewählten Sprechstunde abmelden?</label>
                 </div>
             </div>
             <div class="modal-footer">
