--- a/app/templates/form_participationcreation.html
+++ b/app/templates/form_participationcreation.html
@@ -7,15 +7,15 @@
             </div>
             <div class="modal-body">
                 <div class="form-group">
-                    <label class="control-label col-lg-3" for="begin">Beginn:</label>
+                    <label class="control-label col-lg-3" for="begin" style="color:black;">Beginn:</label>
                     <div class="col-lg-9">
-                        <h2 id="begin" ng-model="newParticipation.start">{{participateSlot.start}}</h2>
+                        <h2 id="begin" ng-model="newParticipation.start" style="color:black;">{{participateSlot.start}}</h2>
                     </div>
-                    <label class="control-label col-lg-3" for="end">Ende:</label>
+                    <label class="control-label col-lg-3" for="end" style="color:black;">Ende:</label>
                     <div class="col-lg-9">
-                        <h2 id="end" ng-model="newParticipation.end">{{participateSlot.end}}</h2>
+                        <h2 id="end" ng-model="newParticipation.end" style="color:black;">{{participateSlot.end}}</h2>
                     </div>
-                    <label class="control-label col-lg-3" for="remark">Vermerk:</label>
+                    <label class="control-label col-lg-3" for="remark" style="color:black;">Vermerk:</label>
                     <div class="col-lg-9">
                         <input id="remark" class="form-control" type="text"
                                placeholder="Geben Sie einen Vermerk für Ihre Teilnahme an." ng-model="newParticipation.remark"
@@ -23,7 +23,7 @@
                     </div>
                 </div>
                 <div class="form-group">
-                    <label class="control-label col-lg-3" for="email_notification_student">Emailnotifikation:</label>
+                    <label class="control-label col-lg-3" for="email_notification_student" style="color:black;">Emailnotifikation:</label>
                     <div class="col-lg-9">
                         <input id="email_notification_student" class="checkbox-inline mtp-checkbox" type="checkbox"
                                value="email_notification_student" ng-model="newParticipation.email_notification_student">
