Abstand von Meeting-panels für Studenten angepasst

--- a/app/templates/templ_meetingpanelparticipant.html
+++ b/app/templates/templ_meetingpanelparticipant.html
@@ -1,4 +1,4 @@
-<div class="panel mtp-panel {{meetingsViewHandler.getPanelType(meeting)}}" id="panel{{meeting.id}}">
+<div class="panel mtp-panel {{meetingsViewHandler.getPanelType(meeting)}}" id="panel{{meeting.id}}" style="margin-bottom: 20px !important;">
     <div data-toggle="collapse" data-target="#meeting{{meeting.id}}" href="#meeting{{meeting.id}}">
         <div class="row">
             <div class="col-lg-1">
