--- a/app/templates/templ_meetingpanelparticipantselecteddocent.html
+++ b/app/templates/templ_meetingpanelparticipantselecteddocent.html
@@ -1,4 +1,4 @@
-<div class="panel mtp-panel {{meetingsViewHandler.getPanelType(docentMeeting)}}" id="panel{{docentMeeting.id}}">
+<div class="panel mtp-panel {{meetingsViewHandler.getPanelType(docentMeeting)}}" id="panel{{docentMeeting.id}}" style="margin-bottom: 20px !important;">
     <div data-toggle="collapse" data-target="#docentMeeting{{docentMeeting.id}}" href="#docentMeeting{{docentMeeting.id}}">
         <div class="row">
             <div class="col-lg-1">
