--- a/app/templates/form_login.html
+++ b/app/templates/form_login.html
@@ -4,7 +4,7 @@
             <div class="account-wall">
                 <form class="form-signin" name="loginForm" ng-controller="LoginController" ng-submit="submit()">
                     <h2><strong>Anmeldung</strong></h2>
-                    <input class="form-control" type="text" placeholder="Email / Benutzername" ng-model="username" required autofocus>
+                    <input class="form-control" type="text" placeholder="Benutzername" ng-model="username" required autofocus>
                     <input class="form-control" type="password" placeholder="Passwort" ng-model="password" required>
                     <button class="btn mtp-icon-link" type="submit">
                        <i class="fa fa-check fa-lg mtp-icon mtp-icon-xl"></i>
