master: - Filter für abgesagte Meetings in Dozentenview - ng-Fab-Form in alle Forms integriert, um Mehrfachabsenden an Server zu verhindern

--- a/app/templates/form_participationcancel.html
+++ b/app/templates/form_participationcancel.html
@@ -1,6 +1,6 @@
 <div class="modal-dialog modal-lg">
     <div class="modal-content">
-        <form class="form-horizontal" name="cancelForm" ng-submit="submitCancelForm()" novalidate>
+        <form class="form-horizontal" name="cancelForm" ng-fab-form-options="fabFormOptions" ng-submit="submitCancelForm()" novalidate>
             <div class="modal-header">
                 <h2 class="modal-title"><strong>Abmelden</strong></h2>
             </div>
