--- a/app/templates/form_participationcreation.html
+++ b/app/templates/form_participationcreation.html
@@ -1,6 +1,6 @@
 <div class="modal-dialog modal-lg">
     <div class="modal-content">
-        <form class="form-horizontal" name="creationForm" ng-submit="submit()"
+        <form class="form-horizontal" name="creationForm" ng-fab-form-options="fabFormOptions" ng-submit="submit()"
               novalidate>
             <div class="modal-header">
                 <h2 class="modal-title"><strong>Anmelden</strong></h2>
