--- a/app/templates/templ_meetingpaneladmin.html
+++ b/app/templates/templ_meetingpaneladmin.html
@@ -1,5 +1,5 @@
 <div class="panel mtp-panel {{meetingsViewHandler.getPanelType(meeting)}}" id="panel{{meeting.id}}"
-     ng-repeat="meeting in meetings | orderBy:'start'">
+     ng-repeat="meeting in meetings | orderBy:'start' | filter:cancelledFilter()">
     <div data-toggle="collapse" data-target="#meeting{{meeting.id}}" href="#meeting{{meeting.id}}">
         <div class="row">
             <div class="col-lg-1">
