--- a/app/templates/templ_meetingpanelparticipantselecteddocent.html
+++ b/app/templates/templ_meetingpanelparticipantselecteddocent.html
@@ -44,7 +44,7 @@
                     Letztmögliche Anmeldung:
                 </div>
                 <div class="col-lg-6">
-                    {{docentMeeting.last_enrollment}}
+                    {{meetingsViewHandler.getDayMonthYearHourMinutes(docentMeeting.last_enrollment)}}
                 </div>
             </div>
             <div class="row ng-hide" style="margin-bottom: 10px; margin-top: 10px;"
