--- a/app/templates/templ_meetingpaneladmin.html
+++ b/app/templates/templ_meetingpaneladmin.html
@@ -95,7 +95,7 @@
                     Emailbenachrichtigung aktiviert:
                 </div>
                 <div class="col-lg-6">
-                    {{meeting.email_notification_docent}}
+                    {{meetingsViewHandler.convertIntToYesNo(meeting.email_notification_docent)}}
                 </div>
             </div>
             <div class="row">
