--- a/app/templates/form_meetingcancel.html
+++ b/app/templates/form_meetingcancel.html
@@ -27,3 +27,8 @@
         </form>
     </div>
 </div>
+<script type="text/javascript">
+    $(function () {
+        $("[data-toggle='tooltip']").tooltip();
+    });
+</script>
