--- a/app/templates/form_meetingedit.html
+++ b/app/templates/form_meetingedit.html
@@ -58,3 +58,8 @@
         </form>
     </div>
 </div>
+<script type="text/javascript">
+    $(function () {
+        $("[data-toggle='tooltip']").tooltip();
+    });
+</script>
