--- a/app/templates/form_participationcreation.html
+++ b/app/templates/form_participationcreation.html
@@ -43,3 +43,8 @@
         </form>
     </div>
 </div>
+<script type="text/javascript">
+    $(function () {
+        $("[data-toggle='tooltip']").tooltip();
+    });
+</script>
