master: - Methode zum Ermitteln von Panelklasse ausgelagert

--- a/app/templates/templ_meetingpanelparticipantselecteddocent.html
+++ b/app/templates/templ_meetingpanelparticipantselecteddocent.html
@@ -48,7 +48,7 @@
                 </div>
             </div>
             <div class="row ng-hide" style="margin-bottom: 10px; margin-top: 10px;"
-                 ng-show="meetingsViewHandler.isBookable(docentMeeting)">
+                 ng-show="meetingsViewHandler.isParticipateable(docentMeeting)">
                 <div class="col-lg-6">
                     Slots:
                 </div>
