master: - Aufflimmern der Warnungsmeldungen durch Hinzufügen der Klasse ng-hide behoben - Meetings ohne freie Slots werden jetzt rot angezeigt - Anzeige und Steuerung für Unterscheidung zwischen Meeting mit bzw. ohne Slots in Dozentensuche implementiert - Panelfarben werden jetzt korrekt zugeteilt (außer last_enrollment) - Anmeldung an Meetings ohne Slots (max_participants) jetzt möglich

--- a/app/templates/templ_meetingpanelparticipant.html
+++ b/app/templates/templ_meetingpanelparticipant.html
@@ -1,4 +1,4 @@
-<div class="panel mtp-panel {{meetingsViewHandler.getPanelType(meeting)}}" id="panel{{meeting.participation.id}}" style="margin-bottom: 10px !important;">
+<div class="panel mtp-panel {{meetingsViewHandler.getPanelTypeStudent(meeting)}}" id="panel{{meeting.participation.id}}" style="margin-bottom: 10px !important;">
     <div data-toggle="collapse" data-target="#meeting{{meeting.participation.id}}" href="#meeting{{meeting.participation.id}}">
         <div class="row">
             <div class="col-lg-1">
